@@ -22,6 +22,7 @@ Version 1.7.9+svn:
    * Converted the hover tooltips to use the new timer engine
    * MP lobby refresh to the new timer engine
    * Change Drake Flare and Flameheart weapon names to match new weapons.
+   * Add minimap cache for gui2
 
 Version 1.7.9-beta2:
  * AI:
